<resources>
    <string name="app_name">Android Animation</string>

    <string name="sequence">Sequence animation</string>
    <string name="property">Property Animator</string>
    <string name="xml">XML Animator</string>
    <string name="vector">Vector transform</string>
    <string name="transition">Transition animation</string>
    <string name="layout_changes">Layout change</string>
    <string name="draw">Draw animation</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="back">Back</string>
    <string name="transform">Transform</string>
    <string name="change">Change</string>
    <string name="text_1">Some text</string>
    <string name="text_2">Some additional text</string>
</resources>
