<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:gravity="center"
            android:text="@string/app_name"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:src="@drawable/anim_logo"
            />

        <TextView
            android:id="@+id/tvSequence"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sequence"
            />

        <TextView
            android:id="@+id/tvProperty"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/property"
            />

        <TextView
            android:id="@+id/tvXML"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xml"
            />

        <TextView
            android:id="@+id/tvChange"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_changes"
            />

        <TextView
            android:id="@+id/tvTransition"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transition"
            />

        <TextView
            android:id="@+id/tvDraw"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/draw"
            />

        <TextView
            android:id="@+id/tvVector"
            style="@style/ButtonsTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vector"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>